# cmake-cpp-template-basic

./: CMakeLists.txt  CMakePresets.json  README.md
.template/: ConvertFrom-Template.ps1  README.md  templates
include/: ${PROJECT_NAME_SNAKE}.h
src/: ${PROJECT_NAME_SNAKE}.cpp  CMakeLists.txt
